# liture-quotes

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
database/: notes.db  schema.sql
migrations/: 20250319132742_init.down.sql  20250319132742_init.up.sql  20250330093705_search_history.up.sql
scripts/: delete-local-db.sh
src/: App.jsx  App.tsx  main.jsx  main.tsx  styles.css
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  dbconn.rs  import.rs  lib.rs  main.rs  menu.rs  models.rs  queries.rs  sqlschema.rs  utils.rs
src-tauri/src/mac/: window.rs
src-tauri/tests/: queries_tests.rs
src/components/: AddButton.jsx  AddButton.tsx  AddButtonMenu.test.tsx  AddButtonMenu.tsx  AuthorForm.jsx  AuthorPage.jsx  BookForm.jsx  BookHeader.tsx  BookPage.jsx  CategoryMenu.jsx  DeleteConfirmationDialog.jsx  DeleteConfirmationDialog.tsx  Dialog.jsx  Dialog.test.tsx  Dialog.tsx  DualSortMenu.tsx  EditableNoteBox.tsx  EditableQuoteBox.tsx  FavoritesPage.jsx  FavouritesPage.tsx  FloatingMenu.tsx  Footer.tsx  HeaderButton.tsx  Input.tsx  ItemMenu.jsx  ItemMenu.tsx  Modal.jsx  Navbar.jsx  NavigationControls.jsx  NavigationControls.test.tsx  NavigationControls.tsx  NewAuthorForm.jsx  NewAuthorForm.tsx  NewBookForm.jsx  NewBookForm.tsx  NoteBox.jsx  NoteBox.tsx  Popover.jsx  PrimarySidebar.tsx  QuoteBox.tsx  (+18 more)
src/components/__tests__/: AddButtonMenu.test.tsx  Dialog.test.tsx  FloatingMenu.test.tsx  NavigationControls.test.tsx  PrimarySidebar.test.tsx  QuoteDropdownMenu.test.tsx  SecondarySidebar.test.tsx  TagsMenu.test.tsx  Toast.test.tsx
src/components/icons/: ArrowLeft.jsx  ArrowRight.jsx  ArrowsCircle.tsx  Book.jsx  Book.tsx  BookIcon.jsx  BookIcon.tsx  BookOpen.jsx  BookOpen.tsx  Books.tsx  BooksFill.tsx  ChatBubble.tsx  Check.jsx  Check.tsx  ChevronDown.jsx  ChevronDown.tsx  ChevronUpDown.jsx  ChevronUpDown.tsx  Copy.tsx  Details.tsx  Document.tsx  DotsVertical.jsx  DotsVertical.tsx  Edit.jsx  Edit.tsx  Import.tsx  Loading.tsx  MacOSClose.tsx  MacOSFullscreen.tsx  MacOSMinimize.tsx  Plus.jsx  Plus.tsx  Search.tsx  SidebarLeft.tsx  SidebarRight.tsx  Star.jsx  Star.tsx  StarMenu.jsx  StarMenu.tsx  StartStroke.tsx  (+13 more)
src/components/layouts/: Header.jsx  Header.tsx  Navbar.jsx  Navbar.tsx
src/components/pages/: AuthorPage.tsx  FavouritesPage.tsx  SearchPage.tsx
src/context/: DialogContext.jsx  DialogContext.test.tsx  DialogContext.tsx  ToastContext.tsx
src/hooks/: clickOutside.js  clickOutside.ts  useFocusState.ts  useHistory.test.tsx  useOperatingSystem.js
src/pages/: AuthorPage.tsx  BookPage.tsx  FavouritesPage.tsx  SearchPage.tsx
src/screens/: AuthorScreen.tsx  BookScreen.tsx  FavouritesScreen.tsx  SearchScreen.tsx  TagScreen.tsx  TagsScreen.tsx
src/stores/: app.ts  index.ts  primary-sidebar.ts  quotes.ts  search.ts  secondary-sidebar.ts  tags.ts
src/styles/: base.css  theme.css  transitions.css
src/test/: setup.ts
src/types/: convert.ts  index.ts
src/utils/: debug.ts  index.ts  logger.ts  theme.ts
