[package]
name        = "litforge-notes"
version     = "0.1.0"
description = "Notes Manager"
authors     = ["Elia Scotto"]
edition     = "2021"

[lib]
name        = "litforge_notes_lib"
crate-type  = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
tauri                           = { version = "2.4.0", features = [ "macos-private-api", "unstable"] }
tauri-plugin-log                = "2"
tauri-plugin-os                 = "2"
tauri-plugin-dialog             = "2"
tauri-plugin-clipboard-manager  = "2"
serde                           = { version = "1", features = ["derive"] }
serde_json                      = "1"
sqlx                            = { version = "0.7", features = [ "runtime-tokio", "sqlite", "macros", "chrono", "migrate" ] }
tokio                           = { version = "1.36", features = ["full"] }
chrono                          = { version = "0.4", features = ["serde"] }
once_cell                       = "1.21.1"
log                             = "0.4"
strum                           = "0.27.1"
anyhow                          = "1.0.97"
sha2                            = "0.10"
regex = "1.11.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa   = "0.25"
objc    = "0.2"

[dependencies.uuid]
version = "1.16.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
