[package]
name        = "liture-quotes"
version     = "0.1.0"
description = "Quotes Manager"
authors     = ["Elia Scotto"]
edition     = "2021"

[lib]
name        = "liture_notes_lib"
crate-type  = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
tauri                           = { workspace = true }
tauri-plugin-log                = { workspace = true }
tauri-plugin-os                 = { workspace = true }
tauri-plugin-dialog             = { workspace = true }
tauri-plugin-clipboard-manager  = { workspace = true }
serde                           = { workspace = true }
serde_json                      = { workspace = true }
sqlx                            = { workspace = true }
tokio                           = { workspace = true }
chrono                          = { workspace = true }
once_cell                       = { workspace = true }
log                             = { workspace = true }
strum                           = { workspace = true }
anyhow                          = { workspace = true }
sha2                            = { workspace = true }
regex                           = { workspace = true }
glob                            = { workspace = true }
dirs                            = { workspace = true }
rand                            = { workspace = true }
thiserror                       = { workspace = true }
uuid                            = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa   = { workspace = true }
objc    = { workspace = true }
